set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/RestLife/bin)
add_executable(simple_monte_carlo test/simple_monte_carlo.cpp)
add_executable(one_dimen_monte_carlo test/one_dimen_monte_carlo.cpp)
add_executable(sphere_dirs_monte_carlo test/sphere_dirs_monte_carlo.cpp)
add_executable(test_importance_sample_1 test/test_importance_sample_1.cpp)