add_executable(test_output_ppm test_output_ppm.cpp)
add_executable(test_ray test_ray.cpp)
add_executable(test_hit_sphere test_hit_sphere.cpp)
add_executable(test_surface_normal test_surface_normal.cpp)
add_executable(test_hitable test_hitable.cpp)
add_executable(test_camera_antialiasing test_camera_antialiasing.cpp)
add_executable(test_diffuse_1 test_diffuse_1.cpp)
add_executable(test_diffuse_2 test_diffuse_2.cpp)
add_executable(test_material test_material.cpp)
add_executable(test_dielectrics_1 test_dielectrics_1.cpp)
add_executable(test_dielectrics_2 test_dielectrics_2.cpp)
add_executable(test_camera_1 test_camera_1.cpp)
add_executable(test_camera_2 test_camera_2.cpp)
add_executable(test_defocus_blur test_defocus_blur.cpp)
add_executable(random_scene main.cpp)